refactoring and additions for presentation